modified mapster to put tooltip right on building
modified mapster to put tooltip right on building

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -88,7 +88,7 @@
                 <area target="" class="bus" full ="" id="WayburneWD" building="WayburneWD" alt="WayburneWD" title="WayburneWD" href="#" coords="3901,191,3941,231" shape="rect">
 
             <!-- Parking lots -->
-                <area target="_self" alt="LOT A" title="LOT A" href="" coords="776,106,955,285" shape="rect">
+                <area target="" alt="LOT A" title="LOT A" href="" coords="776,106,955,285" shape="rect">
                 <area target="" alt="LOT 7" title="LOT 7" href="" coords="1241,118,1359,119,1603,180,1714,177,1714,252,1871,259,1857,388,1349,381,1349,216,1241,215" shape="poly">
                 <area target="" alt="LOT B" title="LOT B" href="" coords="983,119,1234,205" shape="rect">
                 <area target="" alt="LOT 5" title="LOT 5" href="" coords="1338,440,1435,673" shape="rect">
