--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -148,18 +148,27 @@ area {
   display:none;
 }
 
+/*
 #image {
     position: relative;
     top: 0px;
     left: 0px;
 }
+*/
 
 #image_map {
   position: absolute;
   top: 0px;
-  left: 0px;
-  z-index: -1;    
+  left: 0px; 
 }
+
+/*
+area {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+*/
 
 #bus_stops_overlay, 
 #campus_entrances_overlay, 
