--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -162,3 +162,10 @@ body {
 #food_services_overlay{
   display: none
 }
+
+#details_box {
+  position: absolute;
+  bottom: 0px;
+  background-color: white;
+
+}
