--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -80,6 +80,7 @@
                 <area target="" class="bus" full ="" id="CanadaN" building="CanadaN" alt="CanadaN" title="CanadaN" href="#" coords="260,1229,303,1265" shape="rect">
                 <area target="" class="bus" full ="" id="CanadaS" building="CanadaS" alt="CanadaS" title="CanadaS" href="#" coords="260,1336,300,1376" shape="rect">
                 <area target="" class="bus" full ="" id="GoardN" building="GoardN" alt="GoardN" title="GoardN" href="#" coords="1112,1255,1155,1296" shape="rect">
+                <area target="" class="bus" full ="" id="GoardS" building="GoardS" alt="GoardS" title="GoardS" href="#" coords="1112,1342,1152,1382" shape="rect">
                 <area target="" class="bus" full ="" id="SandersonS" building="SandersonS" alt="SandersonS" title="SandersonS" href="#" coords="2093,1327,2136,1366" shape="rect">
                 <area target="" class="bus" full ="" id="MathissiE" building="MathissiE" alt="MathissiE" title="MathissiE" href="#" coords="2244,1534,2287,1574"  shape="rect">
                 <area target="" class="bus" full ="" id="SandersonN" building="SandersonN" alt="SandersonN" title="SandersonN" href="#" coords="2165,1194,2204,1234" shape="rect">
