--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -46,7 +46,7 @@ body {
   left: 0;
   background-image: linear-gradient(#1307ba 0%, #eb4034 100%);
   overflow-x: hidden;
-  padding-top: 20px;  
+  padding-top: 20px;
 }
 
 .col-sm-10 {
@@ -144,31 +144,30 @@ body {
   border-bottom-left-radius: 40px;
 }
 
+/*
 area { 
   display:none;
 }
-
-/*
-#image {
-    position: relative;
-    top: 0px;
-    left: 0px;
-}
 */
+
+#image {
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
 
 #image_map {
   position: absolute;
   top: 0px;
   left: 0px; 
+  z-index: -1;
 }
 
-/*
 area {
   position: absolute;
   top: 0px;
   left: 0px;
 }
-*/
 
 #bus_stops_overlay, 
 #campus_entrances_overlay, 
@@ -182,11 +181,13 @@ area {
   display: none
 }
 
+/*
 #map_area {
-/*  position: relative;*/
+  position: relative;
   display: inline-block; 
   overflow: auto;    
 }
+*/
 
 #details_box {
   position: absolute;
