--- a/views/academic-buildings.hbs
+++ b/views/academic-buildings.hbs
@@ -80,11 +80,9 @@
         </div>
     </div>
     <div class="col-sm-10">
-        <div style="overflow: auto;">
-            <div id="map_area" style="display: inline-block;">
-                {{>overlay}}
-                <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
-            </div>
+        <div id="map_area">
+            {{>overlay}}
+            <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
         </div>
     </div>
 </div>
