onclick navigating campus

--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -44,12 +44,12 @@
                     <button onclick="selectTransit(this.value)" value="WayburneWD">Westbound Deer Lake Parkway @
                         Waybburne Dr</button> --}}
                 </div>
-                <button class="dropdown-btn">Navigating Campus
+                <button class="dropdown-btn" onclick="toggleDisplay(this)" value="bus_stops_overlay">Navigating Campus
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container">
                     <button>Campus Square</button>
-                    <button>CARI Building</button>
+                    <button onlick="selectTransit(this.value)" value="CARI">CARI Building</button>
                     <button>Telus Theatre</button>
                     <button>Student Housing</button>
                     <button>Recreation Centre</button>
