--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -40,17 +40,18 @@ body {
 }
 
 .col-sm-2 {
-  height: 598px;
+  height: 100%;
   width: 176px;
   z-index: 1;
   left: 0;
   background-image: linear-gradient(#1307ba 0%, #eb4034 100%);
   overflow-x: hidden;
   padding-top: 20px;
+  position: absolute;
 }
 
 .col-sm-10 {
-    padding-left: 0;
+    margin-left: 200px;
     padding-right: 0;
 }
 
