Fixed grammar on main menu

--- a/views/main-menu.hbs
+++ b/views/main-menu.hbs
@@ -28,7 +28,7 @@
     </div>
     <div class="col-sm-7">
       Finding your way around any new place can be difficult and BCIT is no different. While the best way to learn to navigate campus is to do it every day, this activity will help you learn the basics before you even arrive!<br><br>
-      Explore each of the sections on the left to get familiar with our campus layout, important buildings and services and learn some of our current students' favourite places<br><br>
+      Explore each of the sections on the left to get familiar with our campus layout, important buildings and services, and to learn some of current students' favourite places.<br><br>
       <i>Not going to be on campus? Many campus services and supports are still available to you!</i>
     </div>
   </div>
