added some missed lots
added some missed lots

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -102,6 +102,9 @@
                 <area target="" class="sparking" id="LOTQ"   building="LOTQ"   full="LOT Q"   alt="LOT Q" title="LOT Q" href="" coords="160,965,396,1180" shape="rect">
                 <area target="" class="sparking" id="LOTS"   building="LOTS"   full="LOT S"   alt="LOT S" title="LOT S" href="" coords="2817,1285,2885,1349" shape="rect">
                 <area target="" class="sparking" id="LOTS2"  building="LOTS2"  full="LOT S"  alt="LOT S2" title="LOT S2" href="" coords="2294,1382,2365,1460" shape="rect">
+                <area target="" class="sparking" id="LOTM"   building="LOTM"   full="LOT M"  alt="LOT M" title="LOT M" href="" coords="3185,900,2913,832" shape="rect">
+                <area target="" class="sparking" id="LOTH"   building="LOTH"   full="LOT H"  alt="LOT H" title="LOT H" href="" coords="2745,185,2860,396" shape="rect">
+                <area target="" class="sparking" id="LOTD"   building="LOTD"   full="LOT D"  alt="LOT D" title="LOT D" href="" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
             <!-- employee parking-->
                 <area target="" class="eparking" id="LOT7"   building="LOT7"   full="LOT 7"   alt="LOT 7" title="LOT 7" href="" coords="1241,118,1359,119,1603,180,1714,177,1714,252,1871,259,1857,388,1349,381,1349,216,1241,215" shape="poly">
                 <area target="" class="eparking" id="LOT5"   building="LOT5"   full="LOT 5"   alt="LOT 5" title="LOT 5" href="" coords="1338,440,1435,673" shape="rect">
