--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -159,7 +159,8 @@ body {
 #security_overlay,
 #student_parking_overlay,
 #visitor_parking_overlay,
-#food_services_overlay{
+#food_services_overlay,
+#bike_overlay{
   display: none
 }
 
