--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -11,7 +11,7 @@
             <img id="security_overlay" src="/media/overlays/security_overlay.png" usemap="#image-map">
             <img id="student_parking_overlay" src="/media/overlays/student_parking_overlay.png" usemap="#image-map">
             <img id="visitor_parking_overlay" src="/media/overlays/visitor_parking_overlay.png" usemap="#image-map">
-
+            <img id="bike_overlay" src="/media/overlays/bike_overlay.png" usemap="#image-map">
             <img id="image" src="/media/burnaby_campus_map.png">
 
             <map id="image_map" name="image-map">
