added display nones for area
added display nones for area

--- a/public/css/other-key-places-stylesheet.css
+++ b/public/css/other-key-places-stylesheet.css
@@ -150,6 +150,10 @@ body {
   left: 0px;
 }
 
+area { 
+  display:none;
+}
+
 #bus_stops_overlay, 
 #campus_entrances_overlay, 
 #employee_parking_overlay, 
