--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -152,6 +152,10 @@ body {
   left: 0px;
 }
 
+area { 
+  display:none;
+}
+
 #campus_entrances_overlay, 
 #employee_parking_overlay, 
 #first_aid_overlay, 
