--- a/public/css/start-stylesheet.css
+++ b/public/css/start-stylesheet.css
@@ -23,12 +23,12 @@ img {
 }
 
 button {
-    color: #572603;
-    background-color: #f5a627;
+    color: #003c71;
+    background-color: #ffea2e;
     width: 150px;
     height: 40px;
     text-align: inherit;
-    border: 2px solid #f5a627;
+    border: 2px solid #ffea2e;
     border-radius: 12px;
     font-size: 18px;
     font-weight: bold;
