--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -106,13 +106,17 @@
                 <area target="" class="sparking" id="LOTH"   building="LOTH"   full="LOT H"  alt="LOT H" title="LOT H" href="#" coords="2745,185,2860,396" shape="rect">
                 <area target="" class="sparking" id="LOTD"   building="LOTD"   full="LOT D"  alt="LOT D" title="LOT D" href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
             <!-- employee parking-->
+                <area target="" class="eparking" id="LOT19"   building="LOT19"   full="LOT 19"   alt="LOT 19" title="LOT 19" href="" coords="690,821,797,914" shape="rect">
+                <area target="" class="eparking" id="LOT16"   building="LOT16"   full="LOT 16"   alt="LOT 16" title="LOT 16" href="" coords="797,937,890,1033" shape="rect">
+                <area target="" class="eparking" id="LOT1"   building="LOT1"   full="LOT 1"   alt="LOT 1" title="LOT 1" href="" coords="1012,976,1087,1055" shape="rect">
+                <area target="" class="eparking" id="LOT10"   building="LOT10"   full="LOT 10"   alt="LOT 10" title="LOT 10" href="" coords="1191,754,1259,833" shape="rect">
                 <area target="" class="eparking" id="LOT7"   building="LOT7"   full="LOT 7"   alt="LOT 7" title="LOT 7" href="#" coords="1241,118,1359,119,1603,180,1714,177,1714,252,1871,259,1857,388,1349,381,1349,216,1241,215" shape="poly">
                 <area target="" class="eparking" id="LOT5"   building="LOT5"   full="LOT 5"   alt="LOT 5" title="LOT 5" href="#" coords="1338,440,1435,673" shape="rect">
                 <area target="" class="eparking" id="LOT12"  building="LOT12"  full="LOT 12"  alt="LOT 12" title="LOT 12" href="#" coords="1463,431,1571,431,1567,477,1585,506,1596,635,1563,599,1560,517,1513,470,1485,470,1485,499,1463,506" shape="poly">
                 <area target="" class="eparking" id="LOT26"  building="LOT26"  full="LOT 26"  alt="LOT 26" title="LOT 26" href="#" coords="3304,155,3393,237" shape="rect">
                 <area target="" class="eparking" id="LOT27"  building="LOT27"  full="LOT 27"  alt="LOT 27" title="LOT 27" href="#" coords="3293,430,3533,472" shape="rect">
                 <area target="" class="eparking" id="LOT6"   building="LOT6"   full="LOT 6"   alt="LOT 6" title="LOT 6" href="#" coords="1778,1190,2079,1236" shape="rect">
-                <area target="" class="eparking" id="LOT62"  building="LOT62"  full="LOT 6"  alt="LOT 6.2" title="LOT 6.2" href="#" coords="1843,799,1914,857" shape="rect">
+                <area target="" class="eparking" id="LOT62"  building="LOT62"  full="LOT 6"  alt="LOT 6.2" title="LOT 6.2" href="#" coords="1843,799,1957,854" shape="rect">
                 <area target="" class="eparking" id="LOT9"   building="LOT9"   full="LOT 9"   alt="LOT 9" title="LOT 9" href="#" coords="1614,1114,1793,1176" shape="rect">
                 <area target="" class="eparking" id="LOT4"   building="LOT4"   full="LOT 4"   alt="LOT 4" title="LOT 4" href="#" coords="1503,1193,1728,1240" shape="rect">
                 <area target="" class="eparking" id="LOT15"  building="LOT15"  full="LOT 15"  alt="LOT 15" title="LOT 15" href="#" coords="464,1192,754,1246" shape="rect">
