Added script to get rid of title in overlay

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -91,3 +91,9 @@
         </div>
     </div>
 </div>
+<script>
+    let image_map = document.getElementById('image_map');
+    Array.from(image_map.children).forEach(e => {
+        e.removeAttribute("title");
+    })
+</script>
