bike overlay map

--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -152,7 +152,8 @@ area {
 #handicap_overlay,
 #security_overlay,
 #student_parking_overlay,
-#visitor_parking_overlay{
+#visitor_parking_overlay,
+#bike_overlay{
   display: none
 }
 
