--- a/public/css/other-key-places-stylesheet.css
+++ b/public/css/other-key-places-stylesheet.css
@@ -134,7 +134,8 @@ area {
 #handicap_overlay,
 #security_overlay,
 #student_parking_overlay,
-#visitor_parking_overlay{
+#visitor_parking_overlay,
+#bike_overlay{
   display: none
 }
 
