--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -19,29 +19,29 @@
                 </button>
                 <div class="dropdown-container">
                     {{#each transit}}
-                    <button onclick="selectTransit('{{this.id}}', '{{this.name}}', '{{this.bus}}')">{{this.name}}</button>
+                    <button onclick="selectNav('{{this.id}}', '{{this.name}}', '{{this.bus}}')">{{this.name}}</button>
                     {{/each}}
-                    {{!-- <button onclick="selectTransit(this.value)" value="CanadaN">Northbound Willingdon Ave @ Canada Way</button>
-                    <button onclick="selectTransit(this.value)" value="CanadaS">Southbound Willingdon Ave @ Canada Way</button>
-                    <button onclick="selectTransit(this.value)" value="GoardN">Northbound Willingdon Ave @ Goard Way</button>
-                    <button onclick="selectTransit(this.value)" value="GoardS">Southbound Willingdon Ave @ Goard Way</button>
-                    <button onclick="selectTransit(this.value)" value="SandersonN">Northbound Willingdon Ave @
+                    {{!-- <button onclick="selectNav(this.value)" value="CanadaN">Northbound Willingdon Ave @ Canada Way</button>
+                    <button onclick="selectNav(this.value)" value="CanadaS">Southbound Willingdon Ave @ Canada Way</button>
+                    <button onclick="selectNav(this.value)" value="GoardN">Northbound Willingdon Ave @ Goard Way</button>
+                    <button onclick="selectNav(this.value)" value="GoardS">Southbound Willingdon Ave @ Goard Way</button>
+                    <button onclick="selectNav(this.value)" value="SandersonN">Northbound Willingdon Ave @
                         Sanderson Way</button>
-                    <button onclick="selectTransit(this.value)" value="SandersonS">Southbound Willingdon Ave @
+                    <button onclick="selectNav(this.value)" value="SandersonS">Southbound Willingdon Ave @
                         Sanderson Way</button>
-                    <button onclick="selectTransit(this.value)" value="DeerN">Northbound Willingdon Ave @ Deer Lake
+                    <button onclick="selectNav(this.value)" value="DeerN">Northbound Willingdon Ave @ Deer Lake
                         Parkway</button>
-                    <button onclick="selectTransit(this.value)" value="WillingdonEB">Eastbound Canada Way @ Willingdon
+                    <button onclick="selectNav(this.value)" value="WillingdonEB">Eastbound Canada Way @ Willingdon
                         Ave</button>
-                    <button onclick="selectTransit(this.value)" value="WillingdonWB">Westbound Canada Way @ Willingdon
+                    <button onclick="selectNav(this.value)" value="WillingdonWB">Westbound Canada Way @ Willingdon
                         Ave</button>
-                    <button onclick="selectTransit(this.value)" value="BetaE">Eastbound Canada Way @ Beta Ave</button>
-                    <button onclick="selectTransit(this.value)" value="BetaW">Westbound Canada Way @ Beta Ave</button>
-                    <button onclick="selectTransit(this.value)" value="MathissiE">Eastbound Sanderson Way @ Mathissi
+                    <button onclick="selectNav(this.value)" value="BetaE">Eastbound Canada Way @ Beta Ave</button>
+                    <button onclick="selectNav(this.value)" value="BetaW">Westbound Canada Way @ Beta Ave</button>
+                    <button onclick="selectNav(this.value)" value="MathissiE">Eastbound Sanderson Way @ Mathissi
                         Ave</button>
-                    <button onclick="selectTransit(this.value)" value="WillingdonED">Eastbound Deer Lake Parkway @
+                    <button onclick="selectNav(this.value)" value="WillingdonED">Eastbound Deer Lake Parkway @
                         Willingdon Ave</button>
-                    <button onclick="selectTransit(this.value)" value="WayburneWD">Westbound Deer Lake Parkway @
+                    <button onclick="selectNav(this.value)" value="WayburneWD">Westbound Deer Lake Parkway @
                         Waybburne Dr</button> --}}
                 </div>
                 <button class="dropdown-btn" onclick="toggleDropdown(this), toggleDisplay(this)" value="bus_stops_overlay">Navigating Campus
@@ -49,10 +49,10 @@
                 </button>
                 <div class="dropdown-container">
                     <button>Campus Square</button>
-                    <button onclick="selectTransit(this.value)" value="CARI">CARI Building</button>
-                    <button onclick="selectTransit(this.value)" value="SE06">Telus Theatre</button>
-                    <button onclick="selectTransit(this.value)" value="SW10,SW11,SW12,SW13,SW14,SW15,SW16">Student Housing</button>
-                    <button onclick="selectTransit(this.value)" value="SE16">Recreation Centre</button>
+                    <button onclick="toggleDisplay(this), selectNav(this.name)" name="CARI" value="bus_stops_overlay">CARI Building</button>
+                    <button onclick="toggleDisplay(this), selectNav(this.name)" name="SE06" value="bus_stops_overlay">Telus Theatre</button>
+                    <button onclick="toggleDisplay(this), selectNav(this.name)" name="SW10,SW11,SW12,SW13,SW14,SW15,SW16" value="bus_stops_overlay">Student Housing</button>
+                    <button onclick="toggleDisplay(this), selectNav(this.name)" name="SE16" value="bus_stops_overlay">Recreation Centre</button>
                     <button>Trades Buildings</button>
                     <button onclick="toggleDisplay(this)" value="bike_overlay">Bicycle Route Information</button>
                     <button >Accessibility Routes</button>
