--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -73,20 +73,20 @@
             <!--            CARI Building-->
                 <area target="" class="CARI" full="CARI Building" id="CARI" building="CARI" alt="CARI" title="CARI" href="#" coords="2437,1306,2487,1267,2530,1317,2570,1317,2638,1249,2695,1303,2723,1271,2817,1364,2709,1468,2688,1446,2630,1503,2573,1439,2534,1439,2484,1493,2437,1450,2494,1396,2491,1360" shape="poly">
             <!--            Bus Stops-->
-                <area target="" class="bus" full ="" id="BetaE" building="BetaE" alt="BetaE" title="BetaE" href="#" coords="131,21,171,64" shape="rect">
-                <area target="" class="bus" full ="" id="BetaW" building="BetaW" alt="BetaW" title="BetaW" href="#" coords="35,186,74,229" shape="rect">
-                <area target="" class="bus" full ="" id="WillingdonWB" building="WillingdonWB" alt="WillingdonWB" title="WillingdonWB" href="#" coords="24,854,63,894" shape="rect">
-                <area target="" class="bus" full ="" id="WillingdonEB" building="WillingdonEB" alt="WillingdonEB" title="WillingdonEB" href="#" coords="88,1153,124,1192" shape="rect">
-                <area target="" class="bus" full ="" id="CanadaN" building="CanadaN" alt="CanadaN" title="CanadaN" href="#" coords="260,1229,303,1265" shape="rect">
-                <area target="" class="bus" full ="" id="CanadaS" building="CanadaS" alt="CanadaS" title="CanadaS" href="#" coords="260,1336,300,1376" shape="rect">
-                <area target="" class="bus" full ="" id="GoardN" building="GoardN" alt="GoardN" title="GoardN" href="#" coords="1112,1255,1155,1296" shape="rect">
-                <area target="" class="bus" full ="" id="GoardS" building="GoardS" alt="GoardS" title="GoardS" href="#" coords="1112,1342,1152,1382" shape="rect">
-                <area target="" class="bus" full ="" id="SandersonS" building="SandersonS" alt="SandersonS" title="SandersonS" href="#" coords="2093,1327,2136,1366" shape="rect">
-                <area target="" class="bus" full ="" id="MathissiE" building="MathissiE" alt="MathissiE" title="MathissiE" href="#" coords="2244,1534,2287,1574"  shape="rect">
-                <area target="" class="bus" full ="" id="SandersonN" building="SandersonN" alt="SandersonN" title="SandersonN" href="#" coords="2165,1194,2204,1234" shape="rect">
-                <area target="" class="bus" full ="" id="DeerN" building="DeerN" alt="DeerN" title="DeerN" href="#" coords="3483,1045,3522,1088" shape="rect">
-                <area target="" class="bus" full ="" id="WillingdonED" building="WillingdonED" alt="WillingdonED" title="WillingdonED" href="#" coords="3665,943,3708,982" shape="rect">
-                <area target="" class="bus" full ="" id="WayburneWD" building="WayburneWD" alt="WayburneWD" title="WayburneWD" href="#" coords="3901,191,3941,231" shape="rect">
+                <area target="" data-key="T" class="bus" full ="Test" id="BetaE" building="BetaE" alt="BetaE" title="BetaE" href="#" coords="131,21,171,64" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="BetaW" building="BetaW" alt="BetaW" title="BetaW" href="#" coords="35,186,74,229" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="WillingdonWB" building="WillingdonWB" alt="WillingdonWB" title="WillingdonWB" href="#" coords="24,854,63,894" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="WillingdonEB" building="WillingdonEB" alt="WillingdonEB" title="WillingdonEB" href="#" coords="88,1153,124,1192" shape="rect">
+                <area target="" data-key="T" class="bus" full ="Test" id="CanadaN" building="CanadaN" alt="CanadaN" title="CanadaN" href="#" coords="260,1229,303,1265" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="CanadaS" building="CanadaS" alt="CanadaS" title="CanadaS" href="#" coords="260,1336,300,1376" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="GoardN" building="GoardN" alt="GoardN" title="GoardN" href="#" coords="1112,1255,1155,1296" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="GoardS" building="GoardS" alt="GoardS" title="GoardS" href="#" coords="1112,1342,1152,1382" shape="rect">
+                <area target="" data-key="T" class="bus" full ="Test" id="SandersonS" building="SandersonS" alt="SandersonS" title="SandersonS" href="#" coords="2093,1327,2136,1366" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="MathissiE" building="MathissiE" alt="MathissiE" title="MathissiE" href="#" coords="2244,1534,2287,1574"  shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="SandersonN" building="SandersonN" alt="SandersonN" title="SandersonN" href="#" coords="2165,1194,2204,1234" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="DeerN" building="DeerN" alt="DeerN" title="DeerN" href="#" coords="3483,1045,3522,1088" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="WillingdonED" building="WillingdonED" alt="WillingdonED" title="WillingdonED" href="#" coords="3665,943,3708,982" shape="rect">
+                <area target="" data-key="T" class="bus" full ="" id="WayburneWD" building="WayburneWD" alt="WayburneWD" title="WayburneWD" href="#" coords="3901,191,3941,231" shape="rect">
 
             <!-- Parking lots -->
                 <area target="" class="sparking" id="LOTA"   building="LOTA"   full="LOT A"   alt="LOT A" title="LOT A" href="#" coords="776,106,955,285" shape="rect">
